# roscon-fr-2025

./: .envrc  LICENSE  Makefile  README.md  abstract_en.tex  default.nix  flake.nix  roscon-fr-overlay.nix
abstract/: Makefile
doc/: Makefile  abstract_en.tex  abstract_fr.tex
pal_stats_demo/: default.nix  package.xml  setup.cfg  setup.py
pal_stats_demo/launch/: test_forward_position_controller.launch.py
pal_stats_demo/pal_stats_demo/: publisher_forward_position_controller.py
