<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pal_stats_demo</name>
  <version>0.0.0</version>
  <description>Demo package for pal_statistics introspection</description>
  <maintainer email="maximilien.naveau@pal-robotics.com">user</maintainer>
  <license>BSD 2-clause</license>

  <depend>pal_statistics</depend>
  <depend>rclpy</depend>
  <depend>ros2_control_demo_example_1</depend>
  <depend>std_msgs</depend>
  <depend>plotjuggler</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
